--- a/channel_html_sources/channel_72.html
+++ b/channel_html_sources/channel_72.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-315-j5jjsht4-v2/imageContent-315-j5jjsht4-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">TV9 Marathi</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Gurrukilli Yashachi</div>
 </div>
 
 <div id="jwplayerDiv"></div>
