--- a/channel_html_sources/channel_530.html
+++ b/channel_html_sources/channel_530.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-62610-koxujv2g-v2/imageContent-62610-koxujv2g-m3.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Santwani</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => PP Shakti Putra Ji Maharaj Live</div>
 </div>
 
 <div id="jwplayerDiv"></div>
