--- a/channel_html_sources/channel_406.html
+++ b/channel_html_sources/channel_406.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11997-j9lux9ig-v1/imageContent-11997-j9lux9ig-m5.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Zee Tamil HD</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Mass Mamiyar Class Marumagal</div>
 </div>
 
 <div id="jwplayerDiv"></div>
