--- a/channel_html_sources/channel_145.html
+++ b/channel_html_sources/channel_145.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-792-j5m75dww-v1/imageContent-792-j5m75dww-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Chardikla Time TV</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Gunja Sikh Virse Diyan</div>
 </div>
 
 <div id="jwplayerDiv"></div>
