--- a/channel_html_sources/channel_447.html
+++ b/channel_html_sources/channel_447.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-35306-jqxwmaeo-v1/imageContent-35306-jqxwmaeo-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Colors Gujarati Cinema</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Ranuja Na Raja Ramdev</div>
 </div>
 
 <div id="jwplayerDiv"></div>
