--- a/channel_html_sources/channel_202.html
+++ b/channel_html_sources/channel_202.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-35649-jrz9mhq0-v2/imageContent-35649-jrz9mhq0-m2.PNG" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Zee Delhi NCR Haryana</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Akahde Ke Pahelwan</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
 </div>
 
 <div id="jwplayerDiv"></div>
