--- a/channel_html_sources/channel_413.html
+++ b/channel_html_sources/channel_413.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-12931-jb64agig-v1/imageContent-12931-jb64agig-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Pitaara TV</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Teriya Meriya Hera Pheriyan</div>
 </div>
 
 <div id="jwplayerDiv"></div>
