--- a/channel_html_sources/channel_65.html
+++ b/channel_html_sources/channel_65.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-6904-j6vreaps-v1/imageContent-6904-j6vreaps-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">ET NOW</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Nutrition Week - ITC / Flax / Wellb</div>
 </div>
 
 <div id="jwplayerDiv"></div>
