--- a/channel_html_sources/channel_225.html
+++ b/channel_html_sources/channel_225.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11281-j9j4lf3k-v1/imageContent-11281-j9j4lf3k-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">CNBC Bajaar</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Property Guru</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Commodity Report</div>
 </div>
 
 <div id="jwplayerDiv"></div>
