--- a/channel_html_sources/channel_152.html
+++ b/channel_html_sources/channel_152.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-846-j5m9p55k-v1/imageContent-846-j5m9p55k-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">CNBC Awaaz</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Pehla Sauda</div>
 </div>
 
 <div id="jwplayerDiv"></div>
