--- a/channel_html_sources/channel_98.html
+++ b/channel_html_sources/channel_98.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-267-j5j8x17s-v1/imageContent-267-j5j8x17s-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Aakaash Aath</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Yuganayak Swami Vivekananda</div>
 </div>
 
 <div id="jwplayerDiv"></div>
