--- a/channel_html_sources/channel_192.html
+++ b/channel_html_sources/channel_192.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-8846-j7pq3jmo-v2/imageContent-8846-j7pq3jmo-m3.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Zee Marathi</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Shiva</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Tula Shikvin Changlach Dhada</div>
 </div>
 
 <div id="jwplayerDiv"></div>
