--- a/channel_html_sources/channel_344.html
+++ b/channel_html_sources/channel_344.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11874-j9l376yg-v2/imageContent-11874-j9l376yg-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">TV9 Gujarati</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Good Afternoon Gujarat</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => News Fatafat</div>
 </div>
 
 <div id="jwplayerDiv"></div>
