--- a/channel_html_sources/channel_101.html
+++ b/channel_html_sources/channel_101.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-441-j5jt3mmg-v3/imageContent-441-j5jt3mmg-m3.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">SONY MAX</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => K.G.F: Chapter 1</div>
 </div>
 
 <div id="jwplayerDiv"></div>
